
2022-01-03  Simon Sobisch <simonsobisch@gnu.org>

	* general: revert change 2019-06-05 - all header files that are included
	  from the system use <include.h>, "local.h" is used otherwise with the
	  exceptions of to-be-installed headers which include files that have a
	  local reference to each other after installation (common.h + 
	  and exceptions.def)

2021-11-02  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: use `dnl` comments in all places that are not intended be
	  included in the generated configure script, fixing spurious warnings
	  about potentially undefined macros; 
	* configure.ac: copyright notice in generated script
	* m4/libtool.m4: updated from libtool, with additions for netbsd from Debian

2021-10-11  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: requiring libtool 2.2 via LT_PREREQ,
	  specify use of ar-lib for systems that may need it via AM_PROG_AR
	* configure.ac: moved sys/time.h to optional headers
	* configure.ac: check for more BDB library names (Win32 common names)

2021-10-08  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: dropped portibility warnings for automake because
	  of false-positives, only define specific names we want instead
	  "everything that automake has"
	* configure.ac: explicit check for bison/flex
	* m4/ax_prog_bison.m4, m4/ax_prog_flex.m4: new files from the
	  GNU Autoconf Archive

2021-10-04  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: cleanup for math library check fixing #559
	* configure.ac: removed check for dladdr as we don't use it
	* configure.ac: removed math library as not necessary anymore,
	  see related #702

2021-09-15  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: allow local cJSON to be used during cross-compile
	  and simplified size checks, based on patches of Helmut Grohne
	  (Debian 993872) and Johan Anderholm (patch #39)

2021-04-07  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: check for CC when applying aix hack additional to CFLAGS